load("@drake//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

load(
    "@drake//tools/skylark:drake_lcm.bzl",
    "drake_lcm_cc_library",
    "drake_lcm_java_library",
    "drake_lcm_py_library",
)

load(
    "@drake//tools/skylark:drake_py.bzl",
    "drake_py_binary",
    "drake_py_library",
    "drake_py_unittest",
)

cc_binary(
    name = "kuka_inv_demo",
    srcs = ["iiwa_inverse_kin_demo.cc"],
    data = glob(["config/**"]),
    deps = [
            ":json",
            "@lcm",
            "@drake//:drake_shared_library",
            "//systems/controllers:endeffector_velocity_controller",
            "//systems/controllers:endeffector_position_controller",
    ]
)

cc_binary(
    name = "kuka_crIK_demo",
    srcs = ["iiwa_cr_IK_demo.cc"],
    data = glob(["config/**"]),
    deps = [
            ":json",
            "@lcm",
            "@drake//:drake_shared_library",
            "//systems/controllers:endeffector_velocity_controller",
            "//systems/controllers:endeffector_position_controller",
            "//systems:lcm_rigid_transform"      

    ]
)

cc_binary(
    name = "manip_push_test",
    srcs = ["manip_push_test.cc"],
    data = glob(["config/**"]),
    deps = [
            ":json",
            "@lcm",
            "@drake//:drake_shared_library",
            "//systems/controllers:IK_target_tracking_system",  
            "//systems:lcm_rigid_transform"      
    ]
)

cc_binary(
    name = "manip_push_test_Jac",
    srcs = ["manip_push_test_Jac.cc"],
    data = glob(["config/**"]),
    deps = [
            ":json",
            "@lcm",
            "@drake//:drake_shared_library",
            "//systems/controllers:Jac_target_tracking_system", 
            "//systems/controllers:endeffector_velocity_controller",
            "//systems/controllers:endeffector_position_controller", 
            "//systems:lcm_rigid_transform"      
    ]
)

cc_binary(
    name = "kuka_simulation",
    srcs = ["kuka_simulation.cc"],
    data = [
        "@drake//manipulation/models/iiwa_description:models",
        "models/endeffector_attachment.sdf",
    ],
    deps = [
        "@drake//:drake_shared_library",
        "//common:common",
        ":kuka_torque_controller",
        ":json",
        "@gflags",

    ],
)

cc_binary(
    name = "kuka_simulation_recording",
    srcs = ["kuka_simulation_with_recording.cc"],
    data = [
        "@drake//manipulation/models/iiwa_description:models",
        "models/endeffector_attachment.sdf",
    ],
    deps = [
        "@drake//:drake_shared_library",
        "//common:common",
        ":kuka_torque_controller",
        ":json",
        "@gflags",
        "@lcm",
        "//lcmtypes:lcmt_robot",
        "//systems:lcm_rigid_transform",
        "//systems:lcm_kuka_push_dataframe_creator"
    ],
)


cc_binary(
    name="iiwa_controller_demo",
    srcs = ["iiwa_controller_demo.cc"],
    data = glob(["config/**"]),
    deps = [
            ":json",
            "@lcm",
            "@drake//:drake_shared_library",
            "//systems/controllers:endeffector_velocity_controller",
            "//systems/controllers:endeffector_position_controller",
    ]
)

cc_binary(
    name="iiwa_oscillate",
    srcs = ["iiwa_oscillate.cc"],
    data = glob(["config/**"]),
    deps = [
            "@drake//:drake_shared_library",
            ":json",
            "//systems/controllers:endeffector_velocity_controller",
            "//systems/controllers:endeffector_position_controller",
            "//systems/controllers:safe_velocity_controller",
    ]
)

cc_binary(
    name="iiwa_estop",
    srcs = ["iiwa_estop.cc"],
    deps = [
            "@drake//:drake_shared_library",
	    "@drake//examples/kuka_iiwa_arm:iiwa_lcm",
            "//systems/controllers:endeffector_velocity_controller",
            "//systems/controllers:endeffector_position_controller",
            "//systems/controllers:safe_velocity_controller",
    ]
)

cc_binary(
    name = "iiwa_visualizer",
    srcs = ["iiwa_visualizer.cc"],
    data = [
        "@drake//examples/kuka_iiwa_arm:models",
        "@drake//manipulation/models/iiwa_description:models",
    ],
    deps = [
            "@drake//:drake_shared_library",
            "//common:common",
    ],
    tags = ["manual"],
    deprecation = "Attic/RigidBodyTree is deprecated.",
)

py_binary(
    name = "extract_kuka_dataframe_to_pickle",
    srcs = ["extract_kuka_dataframe_to_pickle.py"],
    deps = ["//lcmtypes:lcmtypes_robot_py", "@drake//lcmtypes:lcmtypes_drake_py", "@lcm//:lcm-python","@drake//:module_py","@lcmtypes_bot2_core//:lcmtypes_bot2_core_py"],
    main = "extract_kuka_dataframe_to_pickle.py"
)

cc_library(
    name = "kuka_torque_controller",
    srcs = ["kuka_torque_controller.cc"],
    hdrs = ["kuka_torque_controller.h"],
    visibility = ["//visibility:public"],
    deps = [
            "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "json",
    hdrs = ["json.hpp"],
)
